[gd_scene load_steps=2 format=3 uid="uid://dfr7jjcbnar2g"]

[ext_resource type="Script" path="res://Scripts/MultiplayerController.gd" id="1_payf1"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_payf1")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 254.0
offset_top = 119.0
offset_right = 398.0
offset_bottom = 150.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 468.0
offset_top = 126.0
offset_right = 612.0
offset_bottom = 157.0
text = "Join
"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 639.0
offset_top = 123.0
offset_right = 783.0
offset_bottom = 154.0
text = "Start Game"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
